[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# to also install the modules under folders w/o __init__.py, we use the pattern pkg*:
include = ["anycalib*"]

[tool.ruff]
src = ["anycalib", "tests", "siclib"]

[tool.ruff.lint.isort]
known-first-party = ["anycalib", "tests", "siclib"]

[project]
name = "anycalib"
version = "1.0"
authors = [{ name = "Javier Tirado Garin", email = "jtiradogarin@gmail.com" }]
description = "AnyCalib - Single View Calibration"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["torch"]

[project.optional-dependencies]
eff = ["xformers>=0.0.27"]
viz = ["matplotlib"]

[tool.pixi.workspace]
channels = ["conda-forge", "https://prefix.dev/spqr-tests"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda="12"
[tool.pixi.dependencies]
python = "3.12.*"

# Based on siclib/requirements.txt
opencv = ">=4.6"
matplotlib = "*"
omegaconf = ">=2.3"
albumentations = "*"
h5py = "*"
hydra-core = ">=1.3"
pandas = "*"
tqdm = "*"
tensorboard = "*"
wandb = "*"
gdown = "*"
kornia = ">=0.7"
pytorch-gpu = "*"
torchvision = "*"
onnx = "*"
onnxscript = "*"
cmake = ">=4.3.1,<5"
ninja = ">=1.13.2,<2"
pip = ">=26.0.1,<27"
libopencv = ">=4.13.0,<5"
pkg-config = ">=0.29.2,<0.30"
cxx-compiler = ">=1.11.0,<2"
make = ">=4.4.1,<5"
cuda-compiler = ">=12.9.1,<13"
tensorrt-cxx-full = ">=10.13.2.6,<11"
tensorrt-cxx-onnx = ">=10.13.2.6,<11"
tensorrt-cxx-plugins = ">=10.13.2.6,<11"
cuda-runtime = "*"

[tool.pixi.pypi-dependencies]
anycalib = { path = ".", editable = true }
siclib = { path = "siclib", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
eff = { features = ["eff"], solve-group = "default" }
viz = { features = ["viz"], solve-group = "default" }
train = { features = ["eff", "viz"], solve-group = "default" }

[tool.pixi.tasks]
test-import = "python -c 'import anycalib; import siclib; print(\"Imports successful\")'"
eval-lamar-p = "python -m siclib.eval.lamar2k_rays --conf anycalib_pretrained --tag anycalib_p --overwrite"
